# adventofcode2020

./: Cargo.toml  LICENSE
src/: adapter_array.rs  binary_boarding.rs  custom_customs.rs  encoding_error.rs  handheld_halting.rs  handy_haversacks.rs  lib.rs  main.rs  passport_processing.rs  password_philosophy.rs  rain_risk.rs  report_repair.rs  seating_system.rs  shuttle_search.rs  toboggan_trajectory.rs
