[package]
name = "adventofcode2020"
version = "0.8.1"
authors = ["Kevin Simpson <ktsimpso@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
anyhow = "1.0.34"
simple-error = "0.2.2"
nom = "6.0.1"
strum = "0.20"
strum_macros = "0.20"
